<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_dark_background"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="-69dp"
            app:cardCornerRadius="50dp">


            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:text="@string/go_back_to_sign_in_sign_up"
                tools:ignore="RtlHardcoded" />


            <EditText
                android:id="@+id/email"
                android:layout_width="327dp"
                android:layout_height="59dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="245dp"
                android:ems="15"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:text="@string/email_address"
                android:autofillHints="emailAddress"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:text="@string/please_enter_the_email_address_that_is_associated_with_your_hyperkicks_account" />

            <Button
                android:id="@+id/rsetbtn"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="300dp"
                android:layout_gravity="center_horizontal"
                android:ems="16"
                android:text="@string/reset_password_btn"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="120dp"
                android:text="@string/reset_password"
                android:textAlignment="gravity"
                android:textSize="40sp" />


        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</RelativeLayout>