<!-- res/layout/cart_item.xml -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/linearLayoutbottom"
    android:padding="8dp">

    <ImageView
        android:id="@+id/cartitemImage1"
        android:layout_width="120dp"
        android:layout_height="102dp"
        android:scaleType="centerCrop"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/shoe1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="261dp"
        android:layout_height="96dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/cartitemImage1"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/productName1"
            android:layout_width="234dp"
            android:layout_height="48dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="2dp"
            android:text="@string/product_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/cartproductQuantity1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75" />

        <TextView
            android:id="@+id/cartbrandname1"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="11dp"
            android:text="@string/brand_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.506" />

        <TextView
            android:id="@+id/cartproductQuantity1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/quantity"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/size1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/size1"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/size1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/_9uk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cartbrandname1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/addtocartbtn"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="110dp"
        android:backgroundTint="@color/black"
        android:text="@string/add_to_cart_"
        android:textColor="@color/white" />


</RelativeLayout>
