<?xml version="1.0" encoding="utf-8"?>
<!--Card View widget-->

<androidx.cardview.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    card_view:contentPadding="3dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="5dp"
    card_view:cardBackgroundColor="@color/white"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="154dp"
        android:layout_height="158dp">

        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productImg"
            android:layout_marginBottom="27dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="13sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="@+id/productImg"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/mrpofproduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productName"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:text="@string/mrp_of_product"
            android:textColor="@color/black"
            android:textSize="12sp"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/product_price"
            card_view:layout_constraintStart_toStartOf="@+id/productName" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:layout_toEndOf="@+id/mrpofproduct"
            android:fontFamily="sans-serif"
            android:text="@string/price_of_product"
            android:textColor="@color/black"
            android:textSize="12sp"
            card_view:layout_constraintStart_toEndOf="@+id/mrpofproduct"
            card_view:layout_constraintTop_toBottomOf="@+id/productName" />

        <ImageView
            android:id="@+id/productImg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:src="@drawable/sliderimg"
            card_view:layout_constraintBottom_toTopOf="@+id/productName"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>


