<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:openDrawer="start"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/toolbar"
            android:elevation="4dp"
            android:background="@color/black"
            app:title="@string/shop"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/searchbar"
                    android:layout_width="39dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="120dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/baseline_tool_search_24" />


                <ImageView
                    android:id="@+id/HyperVR"
                    android:layout_width="39dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="76dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/vrshoes" />

                <ImageView
                    android:id="@+id/shoppingcart"
                    android:layout_width="39dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="28dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/baseline_tool_shopping_cart_24" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:backgroundTint="@color/white"
            app:cardElevation="20dp"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/shonby_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:fontFamily="serif-monospace"
            android:text="@string/shop_by_brand"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>



        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/brandrecycler"
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/shop_by_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/white"
            android:fontFamily="serif-monospace"
            android:textSize="20sp"
            android:text="@string/just_in"
            android:textColor="@color/black"
            android:textStyle="bold" />



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/productRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"/>



    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"/>
</androidx.drawerlayout.widget.DrawerLayout>